Bits and pieces.

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -38,7 +38,7 @@
 				<configuration>
 					<forkMode>once</forkMode>
                     <testFailureIgnore>true</testFailureIgnore>
-					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters} -XX:-UseSplitVerifier</argLine>
+                    <argLine>-javaagent:../../serenity/serenity.jar ${serenity-parameters} ${memory-parameters}</argLine>
 				</configuration>
 			</plugin>
 			<!-- The default plugin for creating the war, we specify a version. -->
