--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -30,7 +30,8 @@
                 <version>2.7.1</version>
                 <configuration>
                     <forkMode>once</forkMode>
-                    <argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters} -XX:-UseSplitVerifier</argLine>
+                    <!-- Was: -XX:-UseSplitVerifier, now is: -noverify -->
+                    <argLine>-javaagent:../../serenity/serenity.jar ${serenity-parameters} ${memory-parameters}</argLine>
                 </configuration>
             </plugin>
             <plugin>
