Bits and pieces.

--- a/code/libs/src/main/resources/environments/prd/spring.properties
+++ b/code/libs/src/main/resources/environments/prd/spring.properties
@@ -166,9 +166,10 @@ hz-network-port-auto-increment=true
 hz-multicast-enabled=true
 hz-multicast-group=224.1.2.3
 
-hz-tcp-ip-enabled=false
+hz-tcp-ip-enabled=true
 hz-interfaces-enabled=true
 hz-tcp-ip-interface=192.168.1.*
+hz-members=192.168.1.8:8020,192.168.1.10:8020,192.168.1.20:8020
 hz-search-map=search
 hz-map-backup-count=0
 hz-map-max-size=100000
