--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -1,6 +1,6 @@
 # Root Logger
-log4j.rootLogger=INFO, console, file
-log4j.rootCategory=INFO, console
+log4j.rootLogger=DEBUG, console, file
+log4j.rootCategory=DEBUG, console
 
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.RollingFileAppender
@@ -10,7 +10,7 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 log4j.appender.file.Append=false
 log4j.appender.file.ImmediateFlush=true
-log4j.appender.file.MaxFileSize=250MB
+log4j.appender.file.MaxFileSize=100MB
 log4j.appender.file.MaxBackupIndex=4
 
 # ikube application console logging
@@ -26,7 +26,3 @@ log4j.category.com=WARN
 log4j.category.org=WARN
 
 log4j.category.ikube=INFO
-log4j.category.ikube.analytics=INFO
-
-log4j.category.ikube.analytics.weka=INFO
-log4j.category.ikube.action.index.handler.strategy=INFO
