Bits and pieces.

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -160,9 +160,9 @@ ikube.dataBaseClass=ikube.database.DataBaseJpaH2
 #ikube.dataBaseClass=ikube.database.DataBaseJpaPostgres
 
 # Grid properties
-hz-instance-name=ikube-prod
-hz-group-name=ikube-prod
-hz-group-password=ikube-prod
+hz-instance-name=ikube-dev
+hz-group-name=ikube-dev
+hz-group-password=ikube-dev
 hz-management-center-enabled=false
 hz-management-center-url=http://localhost:8080/hazelcast
 hz-network-port=8020
