Bits and pieces.

--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -1,6 +1,6 @@
 # Root Logger
-log4j.rootLogger=DEBUG, console, file
-log4j.rootCategory=DEBUG, console
+log4j.rootLogger=INFO, console, file
+log4j.rootCategory=INFO, console
 
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.RollingFileAppender
