--- a/pom.xml
+++ b/pom.xml
@@ -1166,6 +1166,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.encog</groupId>
+            <artifactId>encog-core</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
 
 	<repositories>
