--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -25,4 +25,5 @@ log4j.category.net=WARN
 log4j.category.com=WARN
 log4j.category.org=WARN
 
-log4j.category.ikube=INFO
+log4j.category.ikube=WARN
+log4j.category.ikube.search=DEBUG
