--- a/pom.xml
+++ b/pom.xml
@@ -1171,6 +1171,11 @@
             <artifactId>encog-core</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.tmatesoft.svnkit</groupId>
+            <artifactId>svnkit</artifactId>
+            <version>1.3.8</version>
+        </dependency>
     </dependencies>
 
 	<repositories>
@@ -1236,6 +1241,10 @@
 		<repository>
 			<id>jgit-repository</id>
 			<url>http://download.eclipse.org/jgit/maven</url>
+		</repository>
+		<repository>
+			<id>svnkit-repository</id>
+			<url>http://maven.tmatesoft.com/content/repositories/releases/</url>
 		</repository>
 		<repository>
 			<id>spring-snapshot-repository</id>
