--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -31,8 +31,7 @@
                 <configuration>
                     <forkMode>once</forkMode>
                     <!-- Was: -XX:-UseSplitVerifier, now is: -noverify -->
-                    <argLine>-javaagent:../../serenity/serenity.jar ${serenity-parameters} ${memory-parameters}
-                    </argLine>
+                    <argLine>-javaagent:../../serenity/serenity.jar ${serenity-parameters} ${memory-parameters}</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -42,7 +41,7 @@
                 <executions>
                     <execution>
                         <id>copy-configuration</id>
-                        <phase>deploy</phase>
+                        <phase>install</phase>
                         <configuration>
                             <target>
                                 <echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
