Fixed the persist search by setting the identifier field manually.

--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -41,7 +41,7 @@
                 <executions>
                     <execution>
                         <id>copy-configuration</id>
-                        <phase>install</phase>
+                        <phase>deploy</phase>
                         <configuration>
                             <target>
                                 <echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
