--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -184,17 +184,19 @@ hz-map-merge-policy=hz-ADD_NEW_ENTRY
 
 hz-async-backup-count=0
 hz-max-idle-seconds=60
-#hz-statistics-enabled=true
+hz-statistics-enabled=true
 hz-time-to-live-seconds=60
 
 hz-map-store-enabled=true
-hz-map-store-write-delay=0
+hz-map-store-write-delay=3
 
+# Twitter keys I think
 consumer-key=Sohh43DylUwaXr7smSojBA
 consumer-secret=90xubtexbSwhHBbKXM62pF4QfJnz1NWVkpevwde3Qxo
 token=380355068-JIMLrQyZglGs4WLXo2UShCmXMAMjWeaiZ15ZJkrp
 token-secret=OyhI9UyioglNWrhJnQQWY2ULmNtt9Azfl70z0l8jOPM
 
+# Analytics models for Twitter threshold
 max-training=10000
 
 # How long the analyzer manager will wait before building the analyzers
