Fixed the result type from the services.

--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -26,7 +26,7 @@
 				<version>2.7.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
-                    <!--<argLine>-javaagent:../../serenity/serenity.jar ${serenity-parameters} ${memory-parameters}</argLine>-->
+                    <argLine>-javaagent:../../serenity/serenity.jar ${serenity-parameters} ${memory-parameters}</argLine>
 				</configuration>
 			</plugin>
 			<!-- No idea what this plugin does, perhaps linked to PMD? -->
