Updated the poms versions.

--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -156,9 +156,9 @@ ikube.dataBaseClass=ikube.database.DataBaseJpaH2
 #ikube.dataBaseClass=ikube.database.DataBaseJpaPostgres
 
 # Grid properties
-hz-instance-name=ikube-prod
-hz-group-name=ikube-prod
-hz-group-password=ikube-prod
+hz-instance-name=ikube-sys
+hz-group-name=ikube-sys
+hz-group-password=ikube-sys
 hz-management-center-enabled=false
 hz-management-center-url=http://localhost:8080/hazelcast
 hz-network-port=8000
